--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,7 @@
     --rouge-light: #6b0000;
     --rouge-dark: #3a0000;
     --blanc: rgba(255, 255, 255, 0.85);
-    --blanc-dim: rgba(255, 255, 255, 0.5);
+    --blanc-dim: rgba(255, 255, 255, 0.7);
     --accent: #c49a5a;
     --font: "Bodoni Moda", serif;
 }
@@ -31,7 +31,7 @@ body {
     margin: 0;
     padding: 0;
     background: var(--rouge);
-    color: var(--blanc);
+    color: var(--blanc-dim);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -423,8 +423,7 @@ article {
 .article_contain_list li,
 .article_contain_list ul{
     font-size: 19px;
-    text-align: left;
-    opacity: .8;    
+    text-align: left;  
 }
 
 
@@ -443,8 +442,7 @@ article {
 .article_contain_list li,
 .article_contain_list ul{
     font-size: 19px;
-    text-align: left;
-    opacity: .8;    
+    text-align: left;  
 }
 
 .article_contain_list li{
